# OpenGL-Learn

./: .gitignore  CMakeLists.txt  README.md
3rdpart/glad/include/glad/: glad.h
3rdpart/glad/src/: glad.c
3rdpart/glfw/lib/pkgconfig/: glfw3.pc
GL/: CMakeLists.txt  gl.h  gl_program.cpp  gl_shader.cpp  gl_vao.cpp
OpenGLDemo/: CMakeLists.txt  OpenGLDemo.cpp  OpenGLDemo.h  opengl_demo.cpp
OpenGLES_Project/: settings.gradle
OpenGLES_Project/app/: build.gradle
OpenGLES_Project/app/src/androidTest/java/com/example/opengles_project/: ExampleInstrumentedTest.java
OpenGLES_Project/app/src/main/: AndroidManifest.xml
OpenGLES_Project/app/src/main/assets/: burn_frag.glsl  burn_vert.glsl  cube_frag.glsl  cube_vert.glsl  fade_frag.glsl  fbo_frag.glsl  fbo_vert.glsl  fragment.glsl  highlight_frag.glsl  highlight_vert.glsl  mosaic_frag.glsl  ripple_frag.glsl  transition_frag.glsl  transition_vert.glsl  vertex.glsl
OpenGLES_Project/app/src/main/cpp/: CMakeLists.txt  CommonDef.h  GLPrimitives.h  GLRender.cpp  ImageReader.cpp  ImageReader.h  Imageloader.cpp  Imageloader.h  Log.h  NdkBuffer.cpp  NdkBuffer.h  NdkFBO.cpp  NdkFBO.h  NdkRender.cpp  NdkRender.h  NdkShader.cpp  NdkShader.h  NdkTexture.cpp  NdkTexture.h  NdkVAO.cpp  NdkVAO.h  com_example_opengles_project_GLRender.h  native-lib.cpp
OpenGLES_Project/app/src/main/java/com/example/opengles_project/: GLRender.java  MainActivity.java
OpenGLES_Project/app/src/main/res/values/: strings.xml  themes.xml
OpenGLES_Project/app/src/main/res/values-night/: themes.xml
OpenGLES_Project/app/src/test/java/com/example/opengles_project/: ExampleUnitTest.java
OpenGLES_Project/gradle/wrapper/: gradle-wrapper.properties
OpenGL_Win/: CMakeLists.txt
OpenGL_Win/GL/: gl.h  gl_vao.cpp
OpenGL_Win/OpenGLDemo/: CMakeLists.txt  opengl_demo.cpp
